# leptos-gallery

./: .gitignore  Cargo.toml  README.md  config.toml  requests.http  rust-toolchain.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: app.rs  cart.rs  mod.rs  photo_grid.rs
app/src/models/: cart.rs  mod.rs  photo.rs  user.rs
collection/: bruno.json  create album.bru  delete image.bru  get album.bru  get image.bru  get thumb.bru  homepage.bru  upload image.bru
frontend/src/: lib.rs
migrations/: 20240710072700_create_tables.sql
server/: Cargo.toml
server/src/: auth.rs  config.rs  db.rs  fileserv.rs  lib.rs  main.rs
server/src/handlers/: add_todo.rs  cart.rs  get_todos.rs  login.rs  mod.rs  server_functions.rs
server/src/handlers/album/: add_album.rs  add_item.rs  delete_album.rs  delete_item.rs  get_item.rs  mod.rs
server/src/middleware/: auth.rs
server/src/middlewares/: auth.rs
server/src/routes/: fileserv.rs  leptos_routes.rs  mod.rs  server_functions.rs
server/src/routes/album/: add_album.rs  add_item.rs  delete_album.rs  delete_item.rs  get_album.rs  get_item.rs  mod.rs
server/tests/handlers/album/: add_album.rs  delete_album.rs  mod.rs
style/: main.scss
