[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "stream", "multipart"] }

tracing.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

serde.workspace = true
rand.workspace = true
base64.workspace = true

# SSR
axum = { workspace = true, features = [ "macros", "ws" ], optional = true }
axum_session_auth = { workspace = true, features = [ "sqlite-rustls" ] , optional = true }
axum_session = { workspace = true, features = [ "sqlite-rustls" ] , optional = true }
axum_session_sqlx = { workspace = true , optional = true }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls" ], optional = true }


[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr", 
  "leptos_meta/ssr", 
  "leptos_router/ssr", 
  "dep:leptos_axum",
  "dep:axum",
  "dep:axum_session_auth",
  "dep:axum_session",
  "dep:axum_session_sqlx",
  "dep:sqlx",
]

