[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
anyhow.workspace = true
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls" ]}


app = { path = "../app", default-features = false, features = ["ssr"] }
bcrypt = { version = "0.15", optional = true }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_router.workspace = true
leptos_axum.workspace = true

axum = { workspace = true, features = [ "macros", "ws", "multipart" ]}
axum_session_auth = { workspace = true, features = [ "sqlite-rustls" ] }
axum_session = { workspace = true, features = [ "sqlite-rustls" ] }
axum_session_sqlx = { workspace = true }

simple_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true
testdir.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
futures = "0.3.30"
http = "1.1.0"
hyper = { workspace = true, features = ["full"] }
config = "0.14.0"
uuid.workspace = true
rand = "0.8.5"
bytes = "1.6.0"
tokio-util = "0.7.11"
http-body-util.workspace = true
mime = "0.3.17"
mime_guess = "2.0.5"
thumbnailer = "0.5.1"
walkdir = "2.5.0"

[dev-dependencies]
axum-test = "15.3.0"
tower-http = { version = "0.4.0", features = ["trace"] }
